# MarkCore

./: CMakeLists.txt  README.md  test.md  test2.md
include/: markcore.h
src/: buffer.c  buffer.h  markcore.c  parser.c  parser.h  renderer.c  renderer.h  stack.c  stack.h  types.h
src/renderers/: html_renderer.c  html_renderer.h
tools/: markcore-cli.c
